Added page loader

--- a/pages/products.html
+++ b/pages/products.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+  <body>
+    <div class="loader-wrapper">
+      <span class="loader"><span class="loader-inner"></span></span>
+  </div>
+
     <!-- navbar -->
 
     <nav>
