--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
 </head>
 
 <body>
+  <div class="loader-wrapper">
+    <span class="loader"><span class="loader-inner"></span></span>
+  </div>
+
   <!-- navbar -->
 
   <nav>
@@ -212,11 +216,16 @@
   <!-- /footer -->
 
 
-  
+  <script>
+    const loader = document.querySelector(".loader-wrapper");
+    window.addEventListener("load", function () {
+      document.querySelector("body").style.overflow = "scroll";
+      loader.style.display = "none";
+    });
+  </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
-    
 </body>
 
 </html>
