--- a/pages/about.html
+++ b/pages/about.html
@@ -20,6 +20,11 @@
 </head>
 
 <body>
+    <body>
+        <div class="loader-wrapper">
+          <span class="loader"><span class="loader-inner"></span></span>
+      </div>
+
     <!-- navbar -->
 
     <nav>
@@ -41,11 +46,12 @@
                 <div class="col d-flex justify-content-center">
                     <h1 class="biblio">Biblio</h1>
                 </div>
-                <div class="col d-flex flex-row-reverse">
-                    <button class="cart-btn">
-                        <i class="fa-solid fa-cart-shopping fa-2xl"></i>
+                <div class="toggle-container col d-flex flex-row-reverse">
+                    <span class="cart-item-count">0</span>
+                    <button class="toggle-cart cart-btn" onclick="location.href = 'products.html'">
+                      <i class="fas fa-shopping-cart fa-xl"></i>
                     </button>
-                </div>
+                  </div>
             </div>
         </div>
     </nav>
@@ -85,7 +91,7 @@
     <!-- /footer -->
 
 
-    <script src="js/index.jsxx"></script>
+    <script src="../js/index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
