--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       </article>
       <article class="product col">
         <div class="product-container">
-          <img src="img/Book2.jpg" class="product-img img" />
+          <img src="img/book2.jpg" class="product-img img" />
 
           <div class="product-icons d-flex justify-content-center">
             <!-- <a href="product.html?id=1" class="product-icon">
@@ -167,7 +167,7 @@
       </article>
       <article class="product col">
         <div class="product-container">
-          <img src="img/Book3.jpg" class="product-img img" />
+          <img src="img/book3.jpg" class="product-img img" />
 
           <div class="product-icons d-flex justify-content-center">
             <!-- <a href="product.html?id=1" class="product-icon">
@@ -185,7 +185,7 @@
       </article>
       <article class="product col">
         <div class="product-container">
-          <img src="img/Book4.jpg" class="product-img img" />
+          <img src="img/book4.jpg" class="product-img img" />
 
           <div class="product-icons d-flex justify-content-center">
             <!-- <a href="product.html?id=1" class="product-icon">
