--- a/pages/products.html
+++ b/pages/products.html
@@ -102,10 +102,10 @@
             <i class="fas fa-times"></i>
           </button>
           <header>
-            <h3 style="font-family: 'Kaushan Script', cursive;">your bag</h3>
+            <h3 style="font-family: 'Kaushan Script', cursive;">Your Bag</h3>
           </header>
           <!-- cart items -->
-          <div class="cart-items"></div>
+            <div class="cart-items d-flex justify-content-center"><br><p>Your cart is empty</p></div>
           <!-- footer -->
           <footer>
             <h3 class="cart-total" style="font-family: 'Kaushan Script', cursive;">
