--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="product-container">
           <img src="img/Book1.jpg" class="product-img img" />
 
-          <div class="product-icons d-flex justify-content-center">
+          <div class="product-icons">
             <!-- <a href="product.html?id=1" class="product-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </a> -->
@@ -151,7 +151,7 @@
         <div class="product-container">
           <img src="img/book2.jpg" class="product-img img" />
 
-          <div class="product-icons d-flex justify-content-center">
+          <div class="product-icons">
             <!-- <a href="product.html?id=1" class="product-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </a> -->
@@ -169,7 +169,7 @@
         <div class="product-container">
           <img src="img/book3.jpg" class="product-img img" />
 
-          <div class="product-icons d-flex justify-content-center">
+          <div class="product-icons">
             <!-- <a href="product.html?id=1" class="product-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </a> -->
@@ -187,7 +187,7 @@
         <div class="product-container">
           <img src="img/book4.jpg" class="product-img img" />
 
-          <div class="product-icons d-flex justify-content-center">
+          <div class="product-icons">
             <!-- <a href="product.html?id=1" class="product-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </a> -->
